# neuroflow

./: .gitignore  ACCEPTANCE.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  INVARIANTS.md  README.md  release-plz.toml
.github/: mergeable.yml
.github/workflows/: ci.yml  release-plz.yml  release.yml
doc/: architecture.md  development.md  index.md  introduction.md  publishing.md  setup.md  usage.md
neuroflow/: ContentView.swift  FocusModels.swift  FocusSessionManager.swift  HotkeyCenter.swift  MenuBarView.swift  SettingsView.swift  neuroflowApp.swift
neuroflow.xcodeproj/: project.pbxproj
neuroflow.xcodeproj/xcshareddata/xcschemes/: neuroflow.xcscheme
neuroflowTests/: neuroflowTests.swift
neuroflowUITests/: neuroflowUITests.swift  neuroflowUITestsLaunchTests.swift
src/: config.rs  main.rs  models.rs  report.rs  stats.rs  storage.rs  system.rs  tracker.rs  tui.rs  update.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  stats.rs  storage.rs  tracker.rs  tray_manager.rs  utils.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.svelte  main.ts
ui/src/lib/: Footer.svelte  MotivationalBanner.svelte  ProgressRing.svelte  Settings.svelte  StatCard.svelte  StatsRow.svelte  StatusHeader.svelte  WeeklyChart.svelte
ui/src/stores/: tracker.ts
ui/src/styles/: animations.css  global.css
