[package]
name = "neflo"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
libc = "0.2"
ratatui = "0.26"
crossterm = "0.27"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
