[package]
name = "neflo"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/impulia/neuroflow"
description = "A CLI tool to track focus and idle time on macOS"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
self_update = { version = "0.41", features = ["archive-tar", "compression-flate2"] }
anyhow = "1.0"
humantime = "2.1"
fd-lock = "4.0"
libc = "0.2"
ratatui = "0.26"
crossterm = "0.27"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"

[dev-dependencies]
tempfile = "3.10"

[workspace]
members = ["."]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (output of cargo dist --version)
cargo-dist-version = "0.21.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
# Path that installers should output accomplishments to
install-path = "CARGO_HOME"
# Whether to publish prereleases to GitHub Releases
prerelease-to-github = true
# Publish jobs to run
publish-jobs = []
# Whether to create a GitHub Release from this tag
create-release = true
# Allow dirty (out of date) CI scripts
allow-dirty = ["ci"]
