[package]
name = "neflo"
version = "0.3.0"
description = "A macOS menu bar app to track focus and idle time"
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "neflo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "neflo"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }
humantime = "2"

# Utilities
anyhow = "1"
dirs = "6.0"
fd-lock = "4"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"

[dev-dependencies]
tempfile = "3.10"
